[metadata]
name = megasena
version = 0.0.0

[options]
packages = find:
install_requires =
    numpy
    fastapi
    uvicorn
    mypy
    httpx

[options.extras_require]
dev =
    ipython
    ipdb
    black
    flake8
    pre-commit
    pytest
    coverage
    ipykernel
    jupyterlab

[flake8]
max-line-length = 88
